# catch

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.py
cmake/: Summary.cmake
docker/: docker_build.sh  open_dockerfile.base_centos7.6.framework  open_dockerfile.base_ubuntu18.04.framework
docs/: README.md  build.sh  requirements.txt
pytorch_patches/: README.md  add_max_pool_with_indices_warnings.diff  commit_id  determin_pytorch_abi_version.diff  fallback_to_cpu.diff  fix_max_pool3d_with_ceil_mode_bug_46558.diff  fix_no_access_permission_for_pth.diff  fix_setup_clean.diff  improve_performance_changes.diff  random.diff  support_empty_pinned_tensor.diff  support_isfinite_dispatch.diff  support_jit_module_to_mlu.diff  support_mlu_dataloader.diff  support_mlu_deepcopy.diff  support_mlu_dispatchstub.diff  support_mlu_distributed.diff  support_mlu_module_save.diff  support_mlu_patch.diff  support_mlu_serialization.diff  support_orig_test.diff  (+4 more)
torch_mlu/csrc/: CMakeLists.txt  stub.cpp
torch_mlu/csrc/aten/: CMakeLists.txt
torch_mlu/csrc/aten/cnnl/: cnnlAlgorithms.cpp  cnnlAlgorithms.h  cnnlCommonDescriptors.cpp  cnnlCommonDescriptors.h  cnnlDescriptors.h  cnnlHandle.cpp  cnnlHandle.h  cnnlOpDescriptors.cpp  cnnlOpDescriptors.h  cnnlTensorDescriptors.cpp  cnnlTensorDescriptors.h  cnnl_util.cpp  cnnl_util.h  contiguous.cpp
torch_mlu/csrc/aten/core/: DispatchStub.h  allocator.cpp  allocator.h  caching_allocator.cpp  caching_allocator.h  generator_impl.cpp  generator_impl.h  tensor_impl.cpp  tensor_impl.h
torch_mlu/csrc/aten/device/: caching_notifier.cpp  caching_notifier.h  device.cpp  device.h  guard_impl.cpp  guard_impl.h  mlu_guard.h  notifier.cpp  notifier.h  queue.cpp  queue.h  queue_guard.h
torch_mlu/csrc/aten/operators/: README.md  op_methods.cpp  op_proxy.cpp  op_proxy.h
torch_mlu/csrc/aten/operators/bang/: dump.cpp
torch_mlu/csrc/aten/operators/bang/internal/: bang_internal.h  dump_internal.mlu
torch_mlu/csrc/aten/operators/cnnl/: abs.cpp  activation.cpp  adaptive_pooling.cpp  add.cpp  addmm.cpp  alias.cpp  arange.cpp  as_strided.cpp  bce.cpp  bce_with_logits.cpp  bitwise_operator.cpp  bmm.cpp  cast.cpp  cat.cpp  ceil.cpp  clamp.cpp  clone.cpp  convolution_overrideable.cpp  copy.cpp  diag.cpp  div.cpp  exp.cpp  expand.cpp  fill.cpp  floor.cpp  gather.cpp  index.cpp  index_fill.cpp  index_put.cpp  index_select.cpp  isfinite.cpp  linear.cpp  linspace.cpp  log.cpp  logic.cpp  masked_fill.cpp  masked_select.cpp  matmul.cpp  max.cpp  min.cpp  (+36 more)
torch_mlu/csrc/aten/operators/cnnl/internal/: abs_internal.cpp  activation_internal.cpp  adaptive_pooling_backward_internal.cpp  adaptive_pooling_internal.cpp  alias_internal.cpp  arange_internal.cpp  avg_pool3d_backward_internal.cpp  avg_pool3d_internal.cpp  bce_internal.cpp  bce_with_logits_internal.cpp  biasbackward.cpp  binaryops_util.cpp  binaryops_util.h  bitwise_op_internal.cpp  bmm_internal.cpp  cast_internal.cpp  cat_internal.cpp  ceil_internal.cpp  clamp_internel.cpp  cnnl_internal.h  convolution_float_backward_internal.cpp  convolution_float_forward_internal.cpp  convolution_forward_internal.cpp  convolution_utils.cpp  copy_internal.cpp  depthwise_utils.cpp  diag_internal.cpp  div_internal.cpp  exp_internal.cpp  expand_internal.cpp  fill_internal.cpp  floor_internal.cpp  gather_internal.cpp  index_fill_internal.cpp  index_internal.cpp  index_put_internal.cpp  index_select_internal.cpp  index_util.h  internal_util.cpp  internal_util.h  (+47 more)
torch_mlu/csrc/aten/profile/: profile_mlu.cpp  profile_mlu.h
torch_mlu/csrc/aten/util/: assert_tensor.cpp  assert_tensor.h  cndumper.cpp  cndumper.h  cnlog.cpp  cnlog.h  common.cpp  common.h  dispatch.h  exceptions.h  matrix_util.cpp  matrix_util.h  memory_allocator.cpp  memory_allocator.h  python_interface.cpp  python_interface.h  python_notifier.cpp  python_notifier.h  tensor_util.cpp  tensor_util.h  types.cpp  types.h  version.h
torch_mlu/csrc/distributed/: cncl_utils.h  process_group_cncl.cpp  process_group_cncl.hpp
torch_mlu/csrc/init/: init.cpp  init.h
torch_mlu/csrc/interface/: python_variable_methods.cpp  python_variable_methods.h
torch_mlu/csrc/jit/: CMakeLists.txt  interface.cpp  interface.h
torch_mlu/csrc/jit/codegen/: README.md  codegen.cpp  codegen.h  control_flow.cpp  control_flow.h  io.cpp  io.h  tensor.cpp  tensor.h
torch_mlu/csrc/jit/codegen/convertion/: convert.cpp  convert.h
torch_mlu/csrc/jit/codegen/convertion/ops/: activation.cpp  batchnorm.cpp  concat.cpp  conv.cpp  elementwise.cpp  floor.cpp  int.cpp  matmul.cpp  pooling.cpp  shuffle.cpp  size.cpp  stack.cpp  to.cpp  upsample.cpp
torch_mlu/csrc/jit/codegen/evalution/: eval.cpp  eval.h
torch_mlu/csrc/jit/codegen/evalution/ops/: aten_operator_types.cpp  prim_operator_types.cpp
torch_mlu/csrc/jit/lower/: README.md  customer_lower_manager.cpp  customer_lower_manager.h
torch_mlu/csrc/jit/lower/passes/magicmind/: Lower.cpp  Lower.h  README.md  convNd_to_convolution.cpp  exception_elimination.cpp  passes.h  remove_contiguous.cpp  remove_dropout.cpp  subgraph_rewrite.cpp  subgraph_rewrite.h
torch_mlu/csrc/jit/partition/: README.md  customer_partition_manager.cpp  customer_partition_manager.h
torch_mlu/csrc/jit/partition/passes/: README.md  segment_graph.cpp  segment_graph.h
torch_mlu/csrc/jit/runtime/: README.md  fused_kernel.cpp  fused_kernel.h  graph_runner.cpp  graph_runner.h  runner_cache.cpp  runner_cache.h
torch_mlu/csrc/jit/utils/: data_type.cpp  data_type.h  utils.cpp  utils.h
torch_mlu/csrc/test/: CMakeLists.txt  main.cpp
torch_mlu/csrc/test/cnnl/: README.md  gen_module.py  test_descriptor.cpp
torch_mlu/csrc/test/common/: README.md  test_assert_tensor.cpp  test_guardimpl.cpp  test_memory_allocator.cpp  test_mlu_caching_allocator.cpp  test_notifier.cpp  test_op_methods.cpp  test_queue.cpp  test_queue_pool.cpp  test_tensor_util.cpp  test_types.cpp
torch_mlu/csrc/test/data/: test.txt
torch_mlu/csrc/test/magicmind/: README.md  test_codegen.cpp  test_fuser.cpp  test_runtime.cpp
torch_mlu/csrc/test/utils/: utils.cpp  utils.h
(+270 files in other folders)
